# ticks

./: CMakeLists.txt  README.asciidoc  README.md  main.cpp  ticks.pro  ticks.qrc
config/: ticks.json  ticks.toml
console/: main.py
deamon/: requirement.txt  run.py
deamon/core/: db.py  mqtt_server.py  plugins.py
deamon/lib/: conn.py
notify/: main.py
qml/: CompositiorScreen.qml  Screen.qml  main.qml
ticks-rs/: Cargo.toml
ticks-rs/src/config/: keybinding.rs  mod.rs  window.rs
wm/: config.py  main.py  requirement.txt  wm.py
